--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_svg: ^2.2.3
   smooth_page_indicator: ^1.2.1
   animate_do: ^4.2.0
+  flutter_stripe: ^12.1.1
 
 dev_dependencies:
   flutter_test:
